RESOLVED FIXED 243976
HTML parser should ignore head start tags in "in head noscript" state
https://bugs.webkit.org/show_bug.cgi?id=243976
Summary HTML parser should ignore head start tags in "in head noscript" state
Cameron McCormack (:heycam)
Reported 2022-08-15 23:07:20 PDT
When a <head> start tag is parsed while in the "in head noscript" state (i.e., the parser has the "scripting flag" set to false, and we're inside the <head>), then the tag should be ignored. But there's a typo, which results in us implying a closing </noscript> tag.
Attachments
Cameron McCormack (:heycam)
Comment 1 2022-08-15 23:12:26 PDT
EWS
Comment 2 2022-08-16 15:21:22 PDT
Committed 253489@main (174fe130c083): <https://commits.webkit.org/253489@main> Reviewed commits have been landed. Closing PR #3347 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-08-16 15:22:17 PDT
Cameron McCormack (:heycam)
Comment 4 2022-08-16 16:55:39 PDT
Note You need to log in before you can comment on or make changes to this bug.