HTML parser should ignore head start tags in "in head noscript" state https://bugs.webkit.org/show_bug.cgi?id=243976

Reviewed by Ryosuke Niwa.

https://html.spec.whatwg.org/multipage/parsing.html#parsing-main-inheadnoscript

* LayoutTests/imported/w3c/web-platform-tests/html/syntax/parsing/inhead-noscript-head-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/html/syntax/parsing/inhead-noscript-head.html: Added.
* Source/WebCore/html/parser/HTMLTreeBuilder.cpp:
(WebCore::HTMLTreeBuilder::processStartTag):

Canonical link: https://commits.webkit.org/253489@main